tests/rosetta/out/Dart/cholesky-decomposition.error
run error: exit status 254
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:7:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:21:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      j = (j as num) + 1;
                     ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:24:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:33:28: Error: A value of type 'num' can't be assigned to a variable of type 'double'.
        sum = (sum as num) - ((l[i][k] as num) * (l[j][k] as num) as num);
                           ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:34:24: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
        k = (k as num) + 1;
                       ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:42:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      j = (j as num) + 1;
                     ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:44:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:56:50: Error: A value of type 'String' can't be assigned to a variable of type 'num'.
      if (j.toString().compareTo(m[i].length - 1.toString()) < 0) {
                                                 ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:56:46: Error: The argument type 'num' can't be assigned to the parameter type 'String'.
      if (j.toString().compareTo(m[i].length - 1.toString()) < 0) {
                                             ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:59:22: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
      j = (j as num) + 1;
                     ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:62:20: Error: A value of type 'num' can't be assigned to a variable of type 'int'.
    i = (i as num) + 1;
                   ^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:100:11: Error: Method not found: 'jsonEncode'.
    print(jsonEncode(v));
          ^^^^^^^^^^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:129:5: Error: Undefined name 'stdout'.
    stdout.write('   test $name ...');
    ^^^^^^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:134:9: Error: Undefined name 'stdout'.
        stdout.writeln(' ok (${_formatDuration(d)})');
        ^^^^^^
../../tests/rosetta/out/Dart/cholesky-decomposition.dart:138:9: Error: Undefined name 'stdout'.
        stdout.writeln(' fail $e (${_formatDuration(d)})');
        ^^^^^^
